--- a/mainsecondpage.css
+++ b/mainsecondpage.css
@@ -1,3 +1,4 @@
+
 #header{
   text-align: center;
   font-size: 500%;
@@ -11,48 +12,48 @@
 }
 
 #description{
-	text-align: left;
-  	font-size: 180%;
-  	text-indent: 1.25em; /* Отступ первой строки */
+  text-align: left;
+    font-size: 180%;
+    text-indent: 1.25em; /* Отступ первой строки */
     text-align: justify;
     margin: 5%; /* Отступы вокруг элемента */
 }
 
 #part1{
-	margin-right: 30%;
+  margin-right: 30%;
 }
 
 #part2{
-	float: right;
-	width: 20%;
-	text-align: center;
+  float: right;
+  width: 20%;
+  text-align: center;
 }
 
 .weather{
-	text-align: right;
-  	font-size: 200%;
-  	margin-right: 5%;
+  text-align: right;
+    font-size: 200%;
+    margin-right: 5%;
 }
 
 .weatherheader{
-	text-align: right;
-  	font-size: 200%;
-  	margin-right: 5%;
+  text-align: right;
+    font-size: 200%;
+    margin-right: 5%;
 }
 .weatherout{
-	background-color: thistle; 
+  background-color: thistle; 
   opacity: 0.8;
-	text-align: right;
-  	font-size: 60%;
-  	margin-right: 5%;
+  text-align: right;
+    font-size: 60%;
+    margin-right: 5%;
 }
 .span4
 {
   margin-right: 10%;
 }
 h2{
-	text-align: center;
-  	font-size: 300%;
+  text-align: center;
+    font-size: 300%;
 }
 
 .header1{
@@ -61,9 +62,9 @@ h2{
 }
 
 .header2{
-  	text-align: center;
-  	font-size: 100%;
-  	text-indent: 2em; /* Отступ первой строки */
+    text-align: center;
+    font-size: 100%;
+    text-indent: 2em; /* Отступ первой строки */
     text-align: justify;
     margin: 5%; /* Отступы вокруг элемента */
     padding: 5%; /* Поля вокруг текста */
@@ -79,6 +80,11 @@ h2{
   width: 100px;
 }
 
+.oppos: {
+  display: block;
+  size: 70px; 
+}
+
 #scroll{
   position: absolute; 
   top: 50%; 
@@ -89,3 +95,7 @@ h2{
   margin: 5%; 
   padding: 5px;
 }
+
+  #table{
+    font-size: 30px;
+  }
